almose final version

--- a/CostMangerLocal/views/components/navbar.ejs
+++ b/CostMangerLocal/views/components/navbar.ejs
@@ -20,8 +20,10 @@
             Users
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="/users/new">Create User</a></li>
-            <li><a class="dropdown-item" href="/users/">Show Users</a></li>     
+            <li><a class="dropdown-item" href="#">Create User</a></li>
+            <li><a class="dropdown-item" href="#">Show Users</a></li>    
+            <!-- <li><a class="dropdown-item" href="/users/new">Create User</a></li>
+            <li><a class="dropdown-item" href="/users/">Show Users</a></li>      -->
           </ul>
         </li>
         <!-- End of User section in nav-bar -->
@@ -50,9 +52,11 @@
             aria-expanded="false">
             Costs
           </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="/costs/">All Costs</a></li>
-            <li><a class="dropdown-item" href="/costs/new">Create Cost</a></li>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">  
+            <li><a class="dropdown-item" href="#">All Costs</a></li>
+            <li><a class="dropdown-item" href="#">Create Cost</a></li>         
+            <!-- <li><a class="dropdown-item" href="/costs/">All Costs</a></li>
+            <li><a class="dropdown-item" href="/costs/new">Create Cost</a></li> -->
             <li>
               <hr class="dropdown-divider">
             </li>
