--- a/CostMangerLocal/views/index.ejs
+++ b/CostMangerLocal/views/index.ejs
@@ -1,5 +1,5 @@
 <% layout('layouts/preLoginOut.ejs') %>
-<title>Enter Page</title>
+<title>Enter Screen</title>
 
 <div class="jumbotron">
     <h1 class="display-4">Hi And Welcome &#128075; &#128075;</h1>
