--- a/CostMangerLocal/views/Errors/errorPage.ejs
+++ b/CostMangerLocal/views/Errors/errorPage.ejs
@@ -4,12 +4,12 @@
     <h1>&#128721;  Oh No! &#128721; </h1>
 
     <h4 class="alert-heading">
-      <%= msg %> &#128532;
+      <%= errorObject.msg %> &#128532;
     </h4>
     
     <hr>
 
 
-    <a type="button" class="btn btn-outline-secondary" href="/users/new">Try Again</a>
+    <a type="button" class="btn btn-outline-secondary" href=<%= errorObject.backLink %> ><%= errorObject.backButtonText %> </a>
 
   </div>
