--- a/CostMangerLocal/views/costs/allCosts.ejs
+++ b/CostMangerLocal/views/costs/allCosts.ejs
@@ -1,13 +1,37 @@
 <% layout('layouts/skelton.ejs') %>
-
     <title>Costs</title>
+    <h2 class="text-center">All Costs</h2>
 
-    <table class="table table-striped">
-        <thead>
+    <div class="d-flex mb-3">
+        <div class="me-auto p-2">
+            <a id="addBtn" type="button" class="btn btn-outline-dark btn-sm data-bs-toggle="tooltip" title="Back"
+                href="/users/<%= id%> ">
+                <span class="bi bi-arrow-left"></span>
+            </a> 
+        </div>
+        <div class="p-2">
+            <a id="addBtn" type="button" class="btn btn-outline-primary btn-sm data-bs-toggle="tooltip" title="Add Cost"" href="/users/<%= id%>/costs/new">
+                <span class="bi bi-file-earmark-plus"></span>
+            </a>
+        </div>
+        <div class="p-2">
+            <a id="addBtn" type="button" class="btn btn-outline-info btn-sm data-bs-toggle="tooltip" title="Get Report" href="#">
+                
+               <span class="bi bi-file-earmark-bar-graph"></span>
+            </a>
+            
+        </div>
+
+    </div>
+
+
+    <table class="table table-striped table-hover">
+
+        <thead class="table-light"">
             <tr>
                 <th scope="col">Description</th>
                 <th scope="col">Sum</th>
-                <th scope="col">Date</th>
+                <th scope="col">Date <span style="font-size: x-small;">(yyyy-mm-dd)</span></th>
                 <th scope="col">Category</th>
             </tr>
         </thead>
@@ -30,6 +54,6 @@
                 <% } %>
         </tbody>
     </table>
-    <a id="addBtn" type="button" class="btn btn-outline-secondary btn-sm" href="/users/<%= id%>/costs/new">New Cost</a>
-    <a id="addBtn" type="button" class="btn btn-outline-secondary btn-sm" href="/users/<%= id%>">Back</a>
+
+
     <!-- <script src="/javascripts/newUserClient.js"></script> -->
