--- a/CostMangerLocal/views/users/SignIn.ejs
+++ b/CostMangerLocal/views/users/SignIn.ejs
@@ -3,10 +3,10 @@
 
 <div class="row">
     <div class="col">
-      <input type="text" name="first_name" class="form-control" placeholder="First name" aria-label="First name">
+      <input type="email" name="userName" class="form-control" placeholder="Username" aria-label="Username">
     </div>
     <div class="col">
-      <input type="text" name="last_name" class="form-control" placeholder="Last name" aria-label="Last name">
+      <input type="password" name="password" class="form-control" placeholder="password" aria-label="password">
     </div>
   </div>
   
