--- a/CostMangerLocal/views/components/navbar.ejs
+++ b/CostMangerLocal/views/components/navbar.ejs
@@ -11,7 +11,7 @@
       <ul class="navbar-nav ml-auto">
         
         <li class="nav-item">
-          <a class="nav-link" href="/"><i class="bi bi-house"></i></a>
+          <a class="nav-link" href="/home"><i class="bi bi-house"></i></a>
         </li>        
         <!-- Start of User section in nav-bar -->
         <li class="nav-item dropdown">
