--- a/CostMangerLocal/views/components/navbar.ejs
+++ b/CostMangerLocal/views/components/navbar.ejs
@@ -1,27 +1,28 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark " style="background-color:#0a2d79;">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Cost Manager</a>
-    
+  
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>    
+    </button>
     <div class="collapse navbar-collapse " id="navbarNav">
-      
+
       <ul class="navbar-nav ml-auto">
-        
+
         <li class="nav-item">
           <a class="nav-link" href="/home"><i class="bi bi-house"></i></a>
-        </li>        
+        </li>
         <!-- Start of User section in nav-bar -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
+             aria-expanded="false">
             Users
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="#">Create User</a></li>
-            <li><a class="dropdown-item" href="#">Show Users</a></li>    
+            <li><a class="dropdown-item" href="#">Show Users</a></li>
             <!-- <li><a class="dropdown-item" href="/users/new">Create User</a></li>
             <li><a class="dropdown-item" href="/users/">Show Users</a></li>      -->
           </ul>
@@ -31,7 +32,7 @@
         <!-- Start of Categories section in nav-bar -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
+             aria-expanded="false">
             Categories
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -44,45 +45,48 @@
           </ul>
         </li>
 
-      <!-- End of Categories section in nav-bar -->
+        <!-- End of Categories section in nav-bar -->
 
         <!-- Start of Categories section in nav-bar -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
+             aria-expanded="false">
             Costs
           </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">  
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="#">All Costs</a></li>
-            <li><a class="dropdown-item" href="#">Create Cost</a></li>         
+            <li><a class="dropdown-item" href="#">Create Cost</a></li>
             <!-- <li><a class="dropdown-item" href="/costs/">All Costs</a></li>
             <li><a class="dropdown-item" href="/costs/new">Create Cost</a></li> -->
             <li>
               <hr class="dropdown-divider">
             </li>
-         
+
           </ul>
         </li>
-      <!-- End of Costs section in nav-bar --> 
-    
-    </ul>
- 
- 
+        <!-- End of Costs section in nav-bar -->
+      
+      </ul>
+
+
     </div>
+    
+    
     <ul class="nav navbar-nav navbar-right ml-auto">
       <li class="nav-item">
         <a class="nav-link"href="/"><span class="glyphicon glyphicon-user"></span> Sign Out
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#"><span class="glyphicon glyphicon-log-in">
+
+        <!-- <a class="nav-link" href="#"><span class="glyphicon glyphicon-log-in">
 
         </span> Login
-      </a>
-    </li>
+        </a> -->
+      </li>
     </ul>
   </div>
-  
-  
+
+
 </nav>
 
