--- a/CostMangerLocal/views/components/preNavbar.ejs
+++ b/CostMangerLocal/views/components/preNavbar.ejs
@@ -1,6 +1,14 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark " style="background-color:#0a2d79;">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Cost Manager</a>
+        <div class="d-flex justify-content-center " style="color: aliceblue;">
+            <div id="time">        
+                <!-- <i class= "bi bi-clock"> </i> -->
+                <span id="currentTime" class="text-muted"></span>
+
+            </div>
+        </div>
+
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
