--- a/CostMangerLocal/views/index.ejs
+++ b/CostMangerLocal/views/index.ejs
@@ -1,26 +1,22 @@
 <% layout('layouts/preLoginOut.ejs') %>
 <title>Enter Screen</title>
-
-<div class="jumbotron">
+<div class="jumbotron position-absolute top-50 start-50 translate-middle"">
     <h1 class="display-4">Hi And Welcome &#128075; &#128075;</h1>
-    <!-- <p class="lead">Please Sign-in or Create new user</p> -->
     <p class="lead">Are you new or old user?</p>
     <hr class="my-4">
     <p></p>
-    <p class="lead">
-        <a type="button" class="btn btn-outline-primary"  href="/new">
+    <div class="lead d-flex justify-content-center ">
+        <div class="class="btn-group" role="group" aria-label="Basic outlined example"">
+        <a type="button" class="btn btn-outline-primary btn-m-10" href="/new">
             I'm new user <i class="bi bi-person-plus"></i></a>
         <a type="button" class="btn btn-outline-success" href="/login">Old User</a>
+    </div>
 
-    </p>
+        </div>
   </div>
 
 
 
-
-<!-- <h1>Home page</h1> -->
-<!-- <button id="myButton">Click Me!</button>
-<script src="/javascripts/client.js"></script> -->
 
 
 
