--- a/CostMangerLocal/views/costs/allCosts.ejs
+++ b/CostMangerLocal/views/costs/allCosts.ejs
@@ -1,30 +1,30 @@
 <% layout('layouts/skelton.ejs') %>
-    <title>Costs</title>
-    <h2 class="text-center">All Costs</h2>
+<title>Costs</title>
+<h2 class="text-center">All Costs</h2>
 
-    <div class="d-flex mb-3">
-        <div class="me-auto p-2">
-            <a id="addBtn" type="button" class="btn btn-outline-dark btn-sm data-bs-toggle=" tooltip" title="Back"
-                href="/users/<%= id%> ">
-                <span class="bi bi-arrow-left"></span>
-            </a>
-        </div>
-        <div class="p-2">
-            <a id="addBtn" type="button" class="btn btn-outline-primary btn-sm data-bs-toggle=" tooltip"
-                title="Add Cost"" href=" /users/<%=id%>/costs/new">
-                <span class="bi bi-file-earmark-plus"></span>
-            </a>
-        </div>
-        <div class="p-2">
-            <a id="addBtn" type="button" class="btn btn-outline-info btn-sm data-bs-toggle=" tooltip" title="Get Report"
-                href="#">
+<div class="d-flex mb-3">
+    <div class="me-auto p-2">
+        <a id="addBtn" type="button" class="btn btn-outline-dark btn data-bs-toggle=" tooltip" title="Back"
+        href="/users/<%= id%> ">
+        <span class="bi bi-arrow-left"></span>
+        </a>
+    </div>
+    <div class="p-2">
+        <a id="addBtn" type="button" class="btn btn-outline-primary btn data-bs-toggle=" tooltip"
+        title="Add Cost"" href=" /users/<%=id%>/costs/new">
+        <span class="bi bi-file-earmark-plus"></span>
+        </a>
+    </div>
+    <div class="p-2">
+        <a id="addBtn" type="button" class="btn btn-outline-info btn data-bs-toggle=" tooltip" title="Get Report"
+        href="#">
 
-                <span class="bi bi-file-earmark-bar-graph"></span>
-            </a>
-
-        </div>
+        <span class="bi bi-file-earmark-bar-graph"></span>
+        </a>
 
     </div>
+
+</div>
 <!-- 
 
     <table class="table table-striped table-hover">
@@ -73,26 +73,29 @@
         </tbody>
     </table> -->
 
-    <div class="row row-cols-3  g-4">
-        <% for(let cost of costs) { %>
-            <div class="col">
-                <div class="card w-50">
-                    <div class="card-header">
-                        <h5><%= cost.description.toUpperCase() %></h5> 
-                    </div>
-                  <img src="/images/money.gif" class="card-img-top">
-                  <div class="card-body">
-                    <h5 class="card-text">                          
+<div class="row row-cols-3  g-4">
+    <% for(let cost of costs) { %>
+        <div class="col" style="margin-bottom: 10px;">
+            <div class="card w-50">
+                <div class="card-header">
+                    <h5><%= cost.description.toUpperCase() %></h5>
+                </div>
+                <img src="/images/money.gif" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-text">
                         <%= cost.sum%><small>&#8362;</small>
                     </h5>
-                    
-                  </div>
-                  <div class="card-footer">
+
+                </div>
+                <div class="card-footer">
                     <div class="d-flex justify-content-between">
-                        <a type="button" href="/costs/<%= cost._id%>"
-                            class="btn btn-outline-info btn-sm bi bi-hand-index">
+                        <a type="button" href="/costs/<%=id %>/<%= cost._id%>"
+                           class="btn btn-outline-info btn-sm bi bi-hand-index">
                         </a>
-                        <small class="text-muted"> <%= new Date(cost.date).toLocaleDateString() %> 
+                         <!-- <a type="button" href="/costs/<%= cost._id%>"
+                           class="btn btn-outline-info btn-sm bi bi-hand-index">
+                        </a> -->
+                        <small class="text-muted"> <%= new Date(cost.date).toLocaleDateString() %>
                         </small>
                         <form action="/users/<%= id %>/costs/<%= cost._id%>" method="post">
                             <button id="buttonDelete" class="btn btn-outline-danger btn-sm bi bi-trash">
@@ -102,11 +105,11 @@
 
                     <!-- <small class="text-muted"> <%= new Date(cost.date).toLocaleDateString() %> 
                     </small> -->
-                  </div>
                 </div>
-                
-              </div>
-            <% } %>
-   
+            </div>
+
+        </div>
+    <% } %>
+
 
     <!-- <script src="/javascripts/newUserClient.js"></script> -->
