--- a/CostMangerLocal/views/layouts/preLoginOut.ejs
+++ b/CostMangerLocal/views/layouts/preLoginOut.ejs
@@ -23,9 +23,7 @@
                 integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
                 crossorigin="anonymous"></script>
                 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-
-
-
+                <script src="/javascripts/index.js"></script>
 
 </body>
 
