removing category and cost were added

--- a/CostMangerLocal/views/Categories/allCategories.ejs
+++ b/CostMangerLocal/views/Categories/allCategories.ejs
@@ -1,26 +1,30 @@
 <% layout('layouts/skelton.ejs') %>
-<!--     <title>All Categories</title>
- -->    <% if (categories.length==0) { %>
+    <title>All Categories</title>
+    <% if (categories.length==0) { %>
         <title>Empty</title>
         <div class="alert alert-info" role="alert">
             <h4 class="alert-heading">Well done!</h4>
             <p>Looks like you have no categories yet</p>
             <hr>
-            
+
         </div>
         </div>
         <% } else { %>
-         
+
             <div class="list-group">
                 <% for( let categoryIndex=0; categoryIndex < categories.length; categoryIndex++ ) { %>
-                    <button type="button" class="list-group-item list-group-item-action" aria-current="true">
+                    <a type="button" class="list-group-item list-group-item-action" aria-current="true">
                         <%= categories[categoryIndex].name %>
-                    </button>
+                        <form class="float-end" action="/categories/<%= categories[categoryIndex]._id%>/delete/"  method="post">
+                            <button  class="btn btn-outline-danger btn-sm bi bi-trash">
+                            </button>
+                        </form>
+                    </a>
+                 
                     <% } %>
             </div>
             <% } %>
-            <hr>
-            <a type="button" class="btn btn-outline-primary" href="/categories/new">
-                Add New Category
-            </a>
-         
+                <hr>
+                <a type="button" class="btn btn-outline-primary" href="/categories/new">
+                    Add New Category
+                </a>
