--- a/CostMangerLocal/views/index.ejs
+++ b/CostMangerLocal/views/index.ejs
@@ -7,9 +7,10 @@
     <p></p>
     <div class="lead d-flex justify-content-center ">
         <div class="class="btn-group" role="group" aria-label="Basic outlined example"">
-        <a type="button" class="btn btn-outline-primary btn-m-10" href="/new">
+        <a type="button" class="btn btn-outline-primary btn-m-10" href="/signUp">
             I'm new user <i class="bi bi-person-plus"></i></a>
-        <a type="button" class="btn btn-outline-success" href="/login">Old User</a>
+        <a type="button" class="btn btn-outline-success" href="/login">Take me in</a>
+        <!-- <a type="button" class="btn btn-outline-success" href="/login">Old User</a> -->
     </div>
 
         </div>
