--- a/CostMangerLocal/views/components/navbar.ejs
+++ b/CostMangerLocal/views/components/navbar.ejs
@@ -1,6 +1,7 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark " style="background-color:#0a2d79;">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Cost Manager</a>
+
   
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -14,8 +15,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/home"><i class="bi bi-house"></i></a>
         </li>
+        
         <!-- Start of User section in nav-bar -->
-        <li class="nav-item dropdown">
+        <!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
              aria-expanded="false">
             Users
@@ -23,10 +25,9 @@
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="#">Create User</a></li>
             <li><a class="dropdown-item" href="#">Show Users</a></li>
-            <!-- <li><a class="dropdown-item" href="/users/new">Create User</a></li>
-            <li><a class="dropdown-item" href="/users/">Show Users</a></li>      -->
+         
           </ul>
-        </li>
+        </li> -->
         <!-- End of User section in nav-bar -->
 
         <!-- Start of Categories section in nav-bar -->
@@ -48,7 +49,7 @@
         <!-- End of Categories section in nav-bar -->
 
         <!-- Start of Categories section in nav-bar -->
-        <li class="nav-item dropdown">
+        <!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
              aria-expanded="false">
             Costs
@@ -61,16 +62,18 @@
             <li>
               <hr class="dropdown-divider">
             </li>
-
+     
+          </li>
           </ul>
-        </li>
-        <!-- End of Costs section in nav-bar -->
+      
+        <!-- End of Costs section in nav-bar --> 
       
       </ul>
+      
 
 
     </div>
-    
+
     
     <ul class="nav navbar-nav navbar-right ml-auto">
       <li class="nav-item">
