--- a/CostMangerLocal/views/users/SignIn.ejs
+++ b/CostMangerLocal/views/users/SignIn.ejs
@@ -1,4 +1,5 @@
 <% layout('layouts/preLoginOut.ejs') %>
+<div>
 <form class="row g-4" action="/login" method="post" >
 
 <div class="row">
@@ -10,6 +11,9 @@
     </div>
   </div>
   
-  <button type="submit" class="btn btn-primary" >Login</button>
+  <button type="submit" class="btn btn-primary">Log-In</button>
+  <a href="/signUp"" class="btn btn-outline-primary">Sign-Up</a>
 
   </form>
+
+  </div>
