--- a/CostMangerLocal/views/costs/showCost.ejs
+++ b/CostMangerLocal/views/costs/showCost.ejs
@@ -4,43 +4,49 @@
     </title>
     <a class="btn btn-outline-primary" href="<%= backLink %> ">
         <i class="bi bi-arrow-left-circle"> Back</i>
-
-
     </a>
-    <div class="position-absolute top-50 start-50 translate-middle">
-        <div class="card text-bg-light mb-3 text-center" style="width: 18rem; margin-top: 10px;" ">
+
+    <div class="container">
+        <div class="position-absolute top-50 start-50 translate-middle">
+            <div class="card text-bg-light mb-3 text-center" style="width: 18rem; margin-top: 10px;" ">
         <div class=" card-header">
-            <h5>
-                <%= cost.description.toUpperCase() %>
-            </h5>
-        </div>
+                <h5>
+                    <%= cost.description.toUpperCase() %>
+                </h5>
+            </div>
 
-        <img src="/images/money.gif" class="card-img-top">
-        <div class="card-body">
+            <img src="/images/money.gif" class="card-img-top">
+            <div class="card-body">
 
-            <ul class="list-group list-group-flush ">
-                <li class="list-group-item">
-                    <span class="float-start">Sum:</span>
-                    <i>
-                        <%= cost.sum%><small>&#8362;</small>
-                    </i>
-                </li>
-                <li class="list-group-item">
-                    <span class="float-start">Category:</span>
-                    <i>
-                        <%= cost.category%>
-                    </i>
-                </li>
-                <li class="list-group-item">
-                    <form class="float-center" action="/users/<%= id %>/costs/<%= cost._id%>" method="post">
-                        <button id="buttonDelete" class="btn btn-outline-danger btn-sm bi bi-trash">
-                        </button>
-                    </form>
-                </li>
-            </ul>
+                <ul class="list-group list-group-flush ">
+                    <li class="list-group-item">
+                        <span class="float-start">Sum:</span>
+                        <i>
+                            <%= cost.sum%><small>&#8362;</small>
+                        </i>
+                    </li>
+                    <li class="list-group-item">
+                        <span class="float-start">Category:</span>
+                        <i>
+                            <%= cost.category%>
+                        </i>
+                    </li>
+                    <li class="list-group-item">
+                        <form class="float-end" action="/users/<%= id %>/costs/<%= cost._id%>" method="post">
+                            <button id="buttonDelete" class="btn btn-outline-danger btn bi bi-trash">
+                            </button>
+                        </form>
+                        <form action="/costs/<%=id%>/<%= cost._id%>/edit" method="get">
+                            <button class="btn btn-outline-secondary btn bi bi-gear-fill float-start" ></button>
+                        </form>
 
-            <div id=" costDateId" class="card-footer text-muted">
-                <%= new Date(cost.date).toLocaleDateString() %>
+                    </li>
+
+                </ul>
+
+                <div id=" costDateId" class="card-footer text-muted">
+                    <%= new Date(cost.date).toLocaleDateString() %>
+                </div>
             </div>
         </div>
     </div>
