Natans report version

--- a/CostMangerLocal/views/Report/newReport.ejs
+++ b/CostMangerLocal/views/Report/newReport.ejs
@@ -15,10 +15,18 @@
         </thead>
 
         <tbody>
-   
+          <% costs.forEach(cost => { %>
+            <tr>
+              <th scope="row"></th>
+              <td><%= cost.description %> </td>
+              <td><%= cost.category %> </td>
+              <td><%= cost.date %> </td>
+              <td><%= cost.sum %> </td>
+            </tr>   
+          <% }) %>
         
         </tbody>
-        
+        <th>total: <%= totalSum %> </th>
 
       </table>
  
