connect get report button from home page

--- a/CostMangerLocal/views/home.ejs
+++ b/CostMangerLocal/views/home.ejs
@@ -62,7 +62,7 @@
             <p btn class="lead">
               <a class="btn btn-primary btn-sm" href="/users/<%= user._id%>/costs/" role="button">My Costs</a>
               <a class="btn btn-primary btn-sm" href="/users/<%= user._id%>/costs/new" role="button">Add Costs</a>
-              <a class="btn btn-primary btn-sm" href="#" role="button">Get Report</a>
+              <a class="btn btn-primary btn-sm" href="/report/<%= user._id%>/getReport" role="button">Get Report</a>
             </p>  
 
           </div>
